[package]
name = "background_notes"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[build-dependencies]
winres = "0.1"

[dependencies]
anyhow = "1"
axum = "0.8"
tokio = { version = "1.48", features = ["full"] }
rdev = "0.5"
serde = { version = "1", features = ["derive"] }

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"